# pipegate

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
pipegate/: auth.py  buffers.py  cli.py  client.py  schemas.py  server.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_schemas.py  test_server.py
